# azure-token-validator

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  justfile
src/: main.rs
src/api/: graph.rs  mod.rs
src/token/: claims.rs  jwk.rs  mod.rs  validator.rs
