[package]
name = "azure-token-validator"
version = "0.1.0"
edition = "2021"
authors = ["Antonio Masotti <toniomasotti@gmail.com>"]
description = "A utility to validate and inspect Azure AD JWT tokens"
readme = "README.md"
license = "MIT"


[dependencies]
anyhow = "1.0.97"
base64-url = "3.0.0"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
